--- a/index.html
+++ b/index.html
@@ -41,9 +41,9 @@
 
   <body class="index-page">
     <!-- Preloader -->
-    <div id="preloader" class="preloader">
+    <!--<div id="preloader" class="preloader">
       <img src="assets\img\preloader.gif" alt="Loading..." />
-    </div>
+    </div>-->
 
     <header id="header" class="header dark-background d-flex flex-column">
       <i class="header-toggle d-xl-none bi bi-list"></i>
